--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 Revision history for Interchange6::Schema
 
+0.070 Wed Dec 31 11:39:33 2014 CET
+
+   [ENHANCEMENTS]
+
+   * Set default value of title in Attribute and Attribute value class
+     from name and value column respectively (Peter Mottram).
+   * Add "SetOperations" DBIx::Class::Helper (Peter Mottram).
+
 0.060_93 Fri Dec 26 10:41:23 2014 CET
 
    [ENHANCEMENTS]
