--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,18 @@
 Revision history for Interchange6::Schema
 
+0.081 Wed Mar 18 11:23:10 2015 CET
+
+   [DOCUMENTATION]
+
+   * Add Manual::Cookbook with information on modifying the schema (Peter Mottram).
+
+   [TESTS]
+
+   * Stop using File::Slurp in tests (Peter Mottram, GH #171).
+   * Remove extra debug code that was added to test_mysql.t.
+     It hasn't helped significantly and caused test failures on some linux smoker
+     (Peter Mottram).
+
 0.080 Sun Mar 15 08:00:40 2015 CET
 
    [FEATURES]
