--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,29 @@
 Revision history for Interchange6::Schema
 
+0.085 Thu Jun 18 14:01:29 2015 CEST
+
+   [ENHANCEMENTS]
+
+   * Let reset_token_checksum in User result class work without password
+     (Peter Mottram).
+   * Automatically create uri value in Navigation result class if value
+     is not defined instead of if false (Peter Mottram).
+   * Update last_login and fail_count in User result class on check_password
+     call (Peter Mottram).
+   * Add priority to Address result class (Peter Mottram, GH #175).
+
+   [DOCUMENTATION]
+
+   * Add YAML config Dancer::Plugin::DBIC to database support manual
+     (Peter Mottram).
+   * Fix database support manual text regarding set_strict_mode in MySQL
+     (Peter Mottram).
+   * Add cookbook to list of manuals (Stefan Hornburg).
+
+   [TESTS]
+
+   * Fix datetime comparison check in user tests (Peter Mottram).
+
 0.084 Tue Mar 31 16:39:23 2015 CEST
 
    [API CHANGES]
