--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,23 @@
 Revision history for Interchange6::Schema
 
+0.086 Tue Jun 30 16:46:29 2015 CEST
+
+   [API CHANGES]
+
+   * Move generate_uri method for Navigation result class from insert to new.
+     This skips automatic uri generation in case uri is passed as undef
+     (Peter Mottram, GH #178).
+
+   [BUG FIXES]
+
+   * Fix assumption in 'around check_password' that fail_count is defined
+     (Peter Mottram).
+
+   [TESTS]
+
+   * Add tests to ensure empty password cannot be used for login
+     (Peter Mottram).
+
 0.085 Thu Jun 18 14:01:29 2015 CEST
 
    [ENHANCEMENTS]
