update connect options to current best practice

--- a/lib/Interchange6/Schema/Manual/DatabaseSupport.pod
+++ b/lib/Interchange6/Schema/Manual/DatabaseSupport.pod
@@ -13,12 +13,8 @@ MySQL databases should be created with UTF8 encoding and appropriate collation f
 The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class specific connection attributes> are recommended as a minimum for MySQL:
 
     mysql_enable_utf8 => 1,
-    on_connect_do     => [
-        q|SET SQL_MODE = CONCAT('ANSI,TRADITIONAL,', @@sql_mode)|,
-        q|SET SQL_AUTO_IS_NULL = 0|,
-    ],
-
-NOTE: we no longer recommend the use of C<< on_connect_call   => 'set_strict_mode' >> since that also forces MySQL's L<ONLY_FULL_GROUP_BY|https://dev.mysql.com/doc/refman/5.0/en/sql-mode.html#sqlmode_only_full_group_by> mode which prevents us from using GROUP BY on PK columns which is a great performance boost for PostgreSQL.
+    on_connect_call   => 'set_strict_mode',
+    quote_names       => 1,
 
 YAML-formatted configuration example for L<Dancer::Plugin::DBIC>:
 
@@ -29,10 +25,9 @@ YAML-formatted configuration example for L<Dancer::Plugin::DBIC>:
       password: mypassword
       schema_class: Interchange6::Schema
       options:
-        RaiseError: 1
-        PrintError: 1
         mysql_enable_utf8: 1
-        on_connect_do: ["SET SQL_MODE = CONCAT('ANSI,TRADITIONAL,', @@sql_mode)" ,"SET SQL_AUTO_IS_NULL = 0"]
+        on_connect_call: set_strict_mode
+        quote_names: 1
 
 =head1 PostgreSQL
 
@@ -44,6 +39,7 @@ The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class spec
 
     on_connect_do  => 'SET client_min_messages=WARNING;',
     pg_enable_utf8 => 1,
+    quote_names    => 1,
 
 YAML-formatted configuration example for L<Dancer::Plugin::DBIC>:
 
@@ -54,8 +50,6 @@ YAML-formatted configuration example for L<Dancer::Plugin::DBIC>:
       password: mypassword
       schema_class: Interchange6::Schema
       options:
-        RaiseError: 1
-        PrintError: 1
         on_connect_do: 'SET client_min_messages=WARNING;'
         pg_enable_utf8: 1
         quote_names: 1
@@ -68,6 +62,7 @@ The following L<Connection attributes|DBIx::Class::Storage::DBI/DBIx::Class spec
 
     on_connect_call => 'use_foreign_keys',
     sqlite_unicode  => 1,
+    quote_names     => 1,
 
 In addition the following attribute can be useful for test use only for greatly improved performance:
 
