--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
 Revision history for Interchange6::Schema
 
+0.091 Mon Nov 23 09:23:44 2015 CET
+
+   [BUG FIXES]
+
+   * Use DBIx::Class::Schema::Config as base instead of as component
+     (Peter Mottram, Stefan Hornburg/Racke).
+
 0.090 Wed Nov 18 12:20:44 2015 CET
 
    [ENHANCEMENTS]
