--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,12 @@
 Revision history for Interchange6::Schema
 
+0.092 Mon Jan 18 16:28:41 2016 CET
+
+   [BUG FIXES]
+
+   * Use crypt encoding for password column in User result class
+     (Peter Mottram, GH #188)
+
 0.091 Mon Nov 23 09:23:44 2015 CET
 
    [BUG FIXES]
