--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,25 @@
 Revision history for Interchange6::Schema
 
+0.130 Mon Aug  1 10:57:09 2016 CEST
+
+   [ENHANCEMENTS]
+
+   * Add MediaMessage result class (Stefan Hornburg/Racke).
+
+   [BUG FIXES]
+
+   * Fix problems reported by new DBIx::Class SanityChecker (Peter Mottram).
+   * Simplify DBIC/SQLT dependency config to fix travis 5.24 dep problems
+     (Peter Mottram).
+   * Disregard password for reset token checksum in case it isn't yet
+     defined (Peter Mottram).
+   * Add YAML to build dependencies for the sake of Schema::Config
+     (Peter Mottram).
+
+   [TESTS]
+
+   * Add coverage testing to Travis configuration file (Stefan Hornburg/Racke).
+
 0.120 Mon Jun 27 16:16:36 2016 CEST
 
    [ENHANCEMENTS]
